k8s-manifest/day5assignment/splunkns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: sandhyasplunkns
spec: {}
status: {}
