k8s-manifest/day5assignment/splunkdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sandhya-splunk-web
  name: sandhya-splunk-web
  namespace: sandhyasplunkns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandhya-splunk-web
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sandhya-splunk-web
    spec:
      containers:
      - image: splunk/splunk:latest
        name: splunk
        ports:
        - containerPort: 8000
        resources: {}
status: {}
